--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,9 @@ plugins {
     id 'com.google.gms.google-services'
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 
+
 }
+
 
 android {
     compileSdk 33
@@ -50,10 +52,12 @@ dependencies {
 
 
     implementation platform('com.google.firebase:firebase-bom:32.1.1')
-
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.firebase:firebase-storage'
+    implementation 'com.google.firebase:firebase-auth'
 
+    implementation 'com.google.android.gms:play-services-auth:20.5.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
