--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FlowerTypes"
         tools:targetApi="31">
+
+        <activity
+            android:name=".ui.activity.AllFlowersActivity"
+            android:exported="true"
+            android:label="FlowersApp">
+
+
+        </activity>
+
+        <activity
+            android:name=".ui.activity.LauncherActivity"
+            android:exported="true"
+            android:label="IFlower">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".ui.activity.MainActivity"
             android:exported="true">
@@ -98,16 +117,7 @@
 
         </activity>
 
-        <activity
-            android:name=".ui.activity.AllFlowersActivity"
-            android:exported="true"
-            android:label="FlowersApp">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
-        </activity>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
