--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -117,6 +117,17 @@
 
         </activity>
 
+        <activity
+            android:name=".ui.activity.FullScreenImageActivity"
+            android:exported="true"
+            android:label="Image">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+
+        </activity>
+
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
